# python-copier-template

./: .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  Dockerfile  README-CLAUDE.md  README.md  README.rst  catalog-info.yaml  copier.yml  ctt.toml  dev-requirements.txt  example-answers.yml  justfile  pyproject.toml  renovate.json  requirements.in  requirements.txt  switcher.json  template.yaml
.claude/: settings.json
.devcontainer/: claude-sandbox.sh  devcontainer.json  postCreate.sh
.github/: CONTRIBUTING.md  CONTRIBUTING.rst  dependabot.yml
1.0.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
1.0.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
1.0.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
1.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
1.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
1.29.5/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
1.3.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
2.0.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
2.0.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
2.0.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
2.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
2.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
2.3.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
2.4.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
2.5.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
2.6.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
3.0.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
3.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
4.0.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
4.0.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
4.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
4.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
4.3.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.0.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.0.0a1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
5.0.0a2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.0.0a3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.0.0a4/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
5.0.0a5/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
5.0.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.0.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.0.3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
5.3.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
account-sync/: Dockerfile  dls-nslcd.conf
docs/: conf.py  how-to.md  tutorials.md
extensions/: context.py
main/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
requirements/: constraints.txt  regenerate.sh
template/: .gitignore  .gitleaks.toml  Dockerfile.jinja  README.md.jinja  README.rst.jinja  catalog-info.yaml  catalog-info.yaml.jinja  pyproject.toml.jinja  renovate.json  renovate.json.jinja  (+7 more)
(+1985 files in other folders)
