[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-copier-template"
dynamic = ["version"]
requires-python = ">=3.10"
optional-dependencies = { dev = [
    "copier",
    "myst-parser",
    "pre-commit",
    "pydata-sphinx-theme>=0.12",
    "pytest",
    "ruff",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "tox-uv",
    "twine>=6.1.0",
] }

# # Without this, setuptools apparently try to scan the whole image's filesystem while working in /
# [tool.setuptools.packages.find]
# where = []

[tool.setuptools_scm]

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "tests"


[tool.tox]
skipsdist = true
requires = ["tox-uv>=1.25.0"]
# envs to runs automatically with tox -p
env_list = ["pre-commit", "tests", "docs"]

[tool.tox.env]
passenv = { "*" = "" }
# Include setuptools, pip, ... in the tox envs
uv_seed = { enabled = true }

[tool.tox.env.pre-commit]
description = "Run pre-commit"
allowlist_externals = ["pre-commit"]
commands = [
    [
        "pre-commit",
        "run",
        #"--all-files",
        "--show-diff-on-failure",
        "{posargs}",
    ],
]

[tool.tox.env.tests]
description = "Run tests"
allowlist_externals = ["pytest"]
commands = [["pytest", "{posargs}"]]

[tool.tox.env.docs]
description = "Run docs"
allowlist_externals = ["sphinx-build", "sphinx-autobuild"]
commands = [
    [
        "sphinx-build",
        "-T",
        "docs",
        "build/html",
        { replace = "posargs", default = [
            "-EW",
            "--keep-going",
        ], extend = true },
    ],
]

[tool.ruff]
src = ["src", "tests"]
line-length = 88
lint.select = [
    "B",  # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4", # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",  # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",  # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "W",  # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",  # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
